--- a/scss/components/_activity-settings.scss
+++ b/scss/components/_activity-settings.scss
@@ -16,12 +16,8 @@
 .new-members-list {
     li {
         width: 100%;
-        padding: 8px 0;
-        margin: 10px 0;
+        padding: 18px 0;
         display: flex;
-    }
-    li:last-child {
-        margin-bottom: 0;
     }
     li:not(:last-child) {
         border-bottom: 1px solid $separator-color;
@@ -29,8 +25,10 @@
 }
 
 .member-info {
+    height: 100%;
     flex-basis: 80%;
     display: flex;
+    align-items: center;
 }
 
 .member-pic-container {
